--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,8 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@tanstack/match-sorter-utils": "^8.19.4",
+		"@tanstack/svelte-table": "npm:tanstack-table-8-svelte-5@^0.1.2",
 		"mode-watcher": "^0.5.0",
 		"zod": "^3.23.8"
 	}
