--- a/app/package.json
+++ b/app/package.json
@@ -13,31 +13,30 @@
 	},
 	"devDependencies": {
 		"@iconify/json": "^2.2.275",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.8.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.1",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^1.0.0-next.64",
 		"clsx": "^2.1.1",
-		"eslint": "^9.7.0",
+		"eslint": "^9.15.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
+		"eslint-plugin-svelte": "^2.46.0",
+		"globals": "^15.12.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.9",
+		"svelte": "^5.2.7",
+		"svelte-check": "^4.1.0",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^3.4.15",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
+		"tailwindcss-directional-shadows": "^0.1.13",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.15.0",
 		"unocss": "^0.64.1",
-		"vite": "^5.0.3"
-	},
-	"dependencies": {
+		"vite": "^5.4.11",
 		"@tanstack/match-sorter-utils": "^8.19.4",
 		"@tanstack/svelte-table": "npm:tanstack-table-8-svelte-5@^0.1.2",
 		"mode-watcher": "^0.5.0",
